[package]
name = "block_on_proc"
version = "0.1.0"
authors = ["Drazen Urch <drazen@urch.eu>"]
edition = "2018"
license = "MIT"
description = "Generate a blocking method for each async method in an impl block. Supports either `tokio` or `async-std` backend."
repository = "https://github.com/durch/block_on.git"

[lib]
proc-macro = true

[[test]]
name = "test"
path = "src/test.rs"

[dependencies]
syn = {version = "1", features = ["full"]} 
quote = "1"

[dev-dependencies]
trybuild = "1"
tokio = "0.2"
async-std = "1"